Numerous changes Fixed left panel horizontal scroll Assigned min width to toolbars in left panel Assigned min width to search panel Search panel title center alignment (more needs done to the rest of the panel)

--- a/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
+++ b/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
@@ -27,10 +27,11 @@
 
 .left_panel_content {
 	position: absolute;
-	top: 59px;
+	top: 0;
 	left: 0;
-	bottom: 0;
 	right: 0;
+	bottom: 0;
+	overflow: hidden;
 }
 
 .left_panel_tabs_container {
@@ -40,6 +41,14 @@
 
 .left_panel_toolbar {
 	position: relative;
+}
+
+.left_panel_tree_container {
+	position: absolute;
+	top: 60px;
+	left: 0;
+	bottom: 0;
+	right: 0;
 }
 
 .left_panel_tree {
@@ -1718,26 +1727,35 @@
 
 .search_panel {
 	position: relative;
-	padding: 8px;
+	padding: 0 8px;
+	min-width: 340px;
 }
 
-.search_panel__header {
+.search_panel_header {
 	position: relative;
 	width: 100%;
 	height: 33px;
-	overflow: hidden;
-	/*text-align: center;*/
-	vertical-align: middle;
+	padding: 8px 0;
 }
 
-.absolute--left {
-	display: inline-block;
-	float: left;
+.search_panel_header__text {
+	position: relative;
+	width: 100%;
+	height: 100%;
 }
 
-.absolute--right {
-	display: inline-block;
-	float: right;
+.search_panel_header__text--title {
+	position: absolute;
+	top: 50%;
+	left: 0;
+  	transform: translateY(-50%);
+}
+
+.search_panel_header__text--hints {
+	position: absolute;
+	top: 50%;
+	right: 0;
+  	transform: translateY(-50%);
 }
 
 .search_tips__button {
@@ -1759,6 +1777,7 @@
 /*}*/
 
 #searchHints {
+	position: relative;
 	font-size: 120%;
 	background: #fef69c;
 	padding: 3px;
